# automaton-auditor-swarm

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pyproject.toml  pyproject.toml.backup  requirements.txt
.github/workflows/: deploy.yml
api/: main.py
audit/: final_verified.md  test_debug.md
audit/report_onpeer_generated/: peer_audit_2026-02-27_18-01-26.md  peer_audit_2026-02-28_08-56-26.md
audit/report_onself_generated/: self_audit.md  self_audit_final.md
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AuditForm.tsx  ResultsViewer.tsx
frontend/src/components/ui/: select.tsx
reports/: final_report.md
rubric/: week2_rubric.json
src/: graph.py  main.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: ast_tools.py  doc_tools.py  git_tools.py  repo_tools.py
tests/: debug_langsmith.py  test_langsmith.py
