[project]
name = "automaton-auditor-swarm"
version = "0.1.0"
description = "Deep LangGraph Multi-Agent System for Forensic Code Auditing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Addisu Taye", email = "addisu.taye@example.com" }
]
keywords = ["langgraph", "multi-agent", "forensic-audit", "code-governance"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.0.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "langsmith>=0.1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
